<resources>
    <string name="app_name" translatable="false">Unibo ParticipAct</string>
    <string name="gcm_new_message">New Task Available!</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_task" translatable="false">TaskActivity</string>
    <string name="title_activity_task_list" translatable="false">TaskListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome" translatable="false">ParticipAct</string>
    <string name="title_activity_dashboard" translatable="false">Dashboard</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <string name="card_label_descrizione">"Description: "</string>
    <string name="card_label_punti">"Points: "</string>
    <string name="card_label_sensori">"Sensors: "</string>
    <string name="card_label_durata">"Duration (in min): "</string>
    <string name="card_label_deadline">"Deadline: "</string>
    <string name="card_label_progress">"Completion (in %): "</string>
    <string name="error_login_dialog_title">Attention</string>
    <string name="error_login_dialog_bad_credential">Error in authentication. Check your username and password.</string>
    <string name="error_login_dialog_no_network">Error communicating with the server. Make sure the data connection.</string>
    <string name="error_login_dialog_ok_button" translatable="false">OK</string>
    <string name="card_label_deadline_date">"Available until:"</string>
    <string name="card_label_expiration_date">"Expires on: "</string>
    <string name="error_login_dialog_generic_error">An error occurred while authentication. Check the connection and try again later.</string>
    <string name="card_label_progress_threshold">"Minimum threshold of completion:"</string>
    <string name="welcome_main_card">Hello, ParticipAct is an experiment in participation. The goal is to involve students and volunteers in the first experiment in the world on a large scale of data collection using smartphones, which act as automatic sensors and interaction interfaces for the collection of information on users and on the context in which they are located.</string>
    <string name="welcome_news_beta">Please note that ParticipAct is currently still in testing so some functions may not be available. We invite you to contact us with any questions, suggestions or impressions of use.</string>
    <string name="stats_completed_with_success">Task completed successfully:</string>
    <string name="stats_completed_with_failure">Task not completed successfully:</string>
    <string name="stats_rejected">Task rejected or expired:</string>
    <string name="task_not_exec">Geo Task can not be executed at this location</string>
    <string name="drawer_open" translatable="false">Participact</string>
    <string name="drawer_close" translatable="false">Participact</string>
    <string name="open_question_text">Open Question Text</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="action_photo_take_picture">Take a picture</string>
    <string name="activity_detecion">Activity Detection</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="set_timer">Set Timer</string>
    <string name="next">Next</string>
    <string name="task_not_compatible">Task is not compatible with the current version. Please update your client using the Play Store.</string>
    <string name="login_upper_case" translatable="false">LOGIN</string>
    <string name="battery_drain_description">The graph shows the average consumption of battery ParticipAct detected on a battery charge.</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="static_in_pocket">Static in your pocket</string>
    <string name="task_ParticipAct" translatable="false">Task ParticipAct</string>
    <string name="refresh">Refresh</string>
    <string name="task_activity_detection">Task Activity Detection </string>
    <string name="task_audio_detection">Task Audio Detection</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="pictures_to_take">Pictures to take</string>
    <string name="social_find_friends_button_uppercase">FIND YOUR FRIENDS</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google_plus" translatable="false">Google+</string>
    <string name="previous_short">Prev</string>
    <string name="licenses_error">Error: can\'t show licences.</string>
    <string name="licenses_title">Licenses</string>
    <string name="console_gen_description">The console allows you to activate or suspend the activities of the sensing system. Please note that the deactivation is not definitive, the system will return to normal after 8 hours.</string>
    <string name="console_gen_title">Main Console</string>
    <string name="console_task_description">From this form you can selectively turn off the active tasks. Attention, in this case the deactivation is final.</string>
    <string name="console_task_title">Task Console</string>
    <string name="friends_fragment_friends">Friends</string>
    <string name="friends_fragment_pending">Pending</string>
    <string name="friends_fragment_find">Find</string>
    <string name="friends_fragment_success_friend_remove">Successfully removed friend</string>
    <string name="friends_fragment_fail_friend_remove">Problem in removing friend</string>
    <string name="friends_fragment_success_request">Request handled correctly</string>
    <string name="friends_fragment_fail_request">Problem in handling the request</string>
    <string name="leaderboard_fragment_global">Global</string>
    <string name="leaderboard_fragment_social">Social</string>
    <string name="logout_description">This tab allows you to logout the user.</string>
    <string name="participact_notification">ParticipAct Notification</string>
    <string name="time_restore_success">Time properly restored</string>
    <string name="new_app_update">ParticipAct update</string>
    <string name="tap_to_update">Tap here to update</string>
    <string name="new_tasks_notification">New Tasks available!</string>
    <string name="error">Error:</string>
    <string name="hi">Hi</string>
    <string name="social_fragment_success_request">Request handled correctly</string>
    <string name="social_fragment_success_link_account">Account successfully connected</string>
    <string name="social_fragment_fail_link_account">Error in linking accounts</string>
    <string name="attention">Attention</string>
    <string name="wrong_time_details">We found that the date and time set on the device has changed. The normal operation of PartcipAct will be restored once we verify the validity of those changes. You need an internet connection</string>
    <string name="user_fragment_summary">Summary</string>
    <string name="user_fragment_badges" translatable="false">Badges</string>
    <string name="news_of">News of</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="no_active_tasks">No task is currently active.</string>
    <string name="no_available_tasks">No Task Available</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_description">This card summarizes some information on your profile and in general the experiment.</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="photo_description">Photo description</string>
    <string name="take_picture_short">Take</string>
    <string name="of">of</string>
    <string name="completed">Completed!</string>
    <string name="questionnaire_description">Questionnaire description</string>
    <string name="complete_questionnaire">Complete</string>
    <string name="tasks_active_title">Active tasks</string>
    <string name="tasks_active_description">This card summarizes the information about the tasks that are currently running. </string>
    <string name="tasks_available_title">Available Tasks</string>
    <string name="tasks_available_description">his card summarizes the information about the tasks currently available.</string>
    <string name="tasks_completed_title">Completed Tasks</string>
    <string name="tasks_completed_description">This card summarizes the information about the tasks successfully completed by the user.</string>
    <string name="welcome">Welcome</string>
    <string name="twitter_consumer_key" translatable="false">nG1oP4D3PIXJJdpUfxjrQrURT</string>
    <string name="twitter_consumer_secret" translatable="false">h2yHCujwZTI1L8grVNCNGcE0rcJfqbh1agULLqrRD4VEGQLBA5</string>
    <string name="facebook_app_id" translatable="false">567008370068429</string>
    <string name="social_intro">From here you can connect your social networks to find your friends</string>
    <string name="social_intro_button">LOGIN</string>
    <string name="network_error">Network Error</string>
    <string name="no_data_badges">No badges unlocked</string>
    <string name="no_data_friends">No friends found</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="action_add_task">Add</string>
    <string name="title_activity_create_task" translatable="false">CreateTaskActivity</string>
    <string name="action_add_notification_area">Notification Area</string>
    <string name="action_add_activation_area">Activation Area</string>
    <string name="action_add_area" translatable="false">Area</string>
    <string name="questions_empty_list">Add a question to the current questionaire pressing \"+\" </string>
    <string name="action_closed_answer_question_title">Closed Answer</string>
    <string name="action_open_answer_question_title">Open Answer</string>
    <string name="duration_dialogfragment_hour">hours</string>
    <string name="duration_dialogfragment_min">minutes</string>
    <string name="duration_dialogfragment_cacncel" translatable="false">Cancel</string>
    <string name="duration_dialogfragment_ok" translatable="false">Ok</string>
    <string name="create_task_fragment_name">Name</string>
    <string name="create_task_fragment_description">Description</string>
    <string name="create_task_fragment_start_date">Start Date</string>
    <string name="create_task_fragment_start_time">Start Time</string>
    <string name="create_task_fragment_end_date">End Date</string>
    <string name="create_task_fragment_end_time">End time</string>
    <string name="create_task_fragment_duration">Duration</string>
    <string name="create_task_fragment_refusable">Refusable</string>
    <string name="add_sensing_action_duration">Sensing Duration</string>
    <string name="add_sensing_action_description">Description</string>
    <string name="add_sensing_action_type">Sensing type</string>
    <string name="sensing_duration_info">Rememebr: sensing duration is valid for all sensing task you add. You can\'t specify a sensing duration greather than task duration.</string>
    <string name="task_duration_info">The actual task duration is:</string>
    <string name="duration_dialogfragment_days">days</string>
</resources>