<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ParticipAct
  ~ Copyright 2013-2018 Alma Mater Studiorum – Università di Bologna
  ~ This file is part of ParticipAct.
  ~ ParticipAct is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License.
  ~ ParticipAct is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with ParticipAct. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detection_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionnaire_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/activity_detecion" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timer_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:text="@string/set_timer" />

        <Spinner
            android:id="@+id/ad_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/statico_in_tasca_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:text="@string/static_in_pocket" />

        <ToggleButton
            android:id="@+id/statico_in_tasca_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/static_in_pocket" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/camminare_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:text="@string/walk"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text" />

        <ToggleButton
            android:id="@+id/camminare_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/walk" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/corsa_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:text="@string/run"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text" />

        <ToggleButton
            android:id="@+id/corsa_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/run" />
    </LinearLayout>

</LinearLayout>