<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ParticipAct
  ~ Copyright 2013-2018 Alma Mater Studiorum – Università di Bologna
  ~ This file is part of ParticipAct.
  ~ ParticipAct is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License.
  ~ ParticipAct is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with ParticipAct. If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.github.ksoichiro.android.observablescrollview.ObservableListView
        android:id="@+id/list_questions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"></com.github.ksoichiro.android.observablescrollview.ObservableListView>

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/questions_empty_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/secondary_text"
        android:visibility="invisible"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_addButtonColorNormal="@color/accent"
        fab:fab_addButtonColorPressed="@color/accent"
        android:layout_marginBottom="8dp"
        android:layout_gravity="right|bottom">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/open_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_icon="@drawable/ic_create_white_36dp"
            fab:fab_title="@string/action_open_answer_question_title"
            fab:fab_colorPressed="@color/accent" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/closed_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_title="@string/action_closed_answer_question_title"
            fab:fab_colorNormal="@color/accent"
            fab:fab_icon="@drawable/ic_create_white_36dp"
            fab:fab_colorPressed="@color/accent" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</FrameLayout>